# robotplus_exercise

gazebo_camera_test/: CMakeLists.txt  main.cpp  marker_joint.txt
robotplus_description/: CMakeLists.txt  package.xml  urdf.rviz
robotplus_description/launch/: display.launch
robotplus_description/meshes/: base.STL  machine.STL
robotplus_description/models/qr_wall/meshes/: qr_wall.dae
robotplus_description/urdf/: robot copy.urdf  robot.urdf
robotplus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotplus_moveit_config/config/: fake_controllers.yaml  gazebo_robot.urdf  gazebo_robot2.urdf  gazebo_robot3.urdf  joint_limits.yaml  robot.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
robotplus_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
robotplus_robot_control/: CMakeLists.txt  package.xml
robotplus_robot_control/launch/: robot_control.launch
robotplus_robot_control/src/: main.cpp
robotplus_validation/: CMakeLists.txt  package.xml
robotplus_validation/launch/: robot_control_validation.launch
robotplus_validation/src/: main.cpp
